service/service-appprotocols.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: default
  annotations:
    cloud.google.com/app-protocols: '{"https":"HTTPS","http":"HTTP","admin":"HTTP"}'
  labels:
    app: kong
spec:
  selector:
    app: kong
  ports:
    - name: http
      port: 8000
      targetPort: 8000
    - name: https
      port: 8443
      targetPort: 8443
    - name: admin
      port: 8001
      targetPort: 8001
  type: ClusterIP
