service/service-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
  namespace: default
  kubernetes.io/ingress.regional-static-ip-name: "ingress-internal-static-1" #Internal IP needs to be provisioned on GCP
  kubernetes.io/ingress.class: "gce-internal" #Need proxy only subnet to be provisioned
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: helloweb.default.svc #Naming format for service in different namespace: <serviceName>.<serviceNamespace>.svc , for same namespace use: <serviceName>
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP #GKE needs ClusterIp
